--- a/index.html
+++ b/index.html
@@ -28,9 +28,16 @@
 
     <section id="projetos">
       <h2>Projetos</h2>
-      <p>Odds Burguer</p>
-      <p>Trybe</p>
+      <div class="project-card">
+        <img src="./images/oddslogo.png" alt="Odds Burguer">
+        <div class="project-overlay">
+          <h3>Odds Burguer</h3>
+          <p>Projeto de aplicação de delivery desenvolvido para hamburgueria</p>
+          <a href="https://github.com/Kai0so/odds-burguer-app" target="_blank">Ver Projeto</a>
+        </div>
+      </div>
     </section>
+
 
     <section id="habilidades">
       <h2>Habilidades</h2>
