--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="projetos">
       <h2>Projetos</h2>
       <div class="project-card">
-        <img src="./images/oddslogo.png" alt="Odds Burguer">
+        <img src="/images/oddslogo.png" alt="Odds Burguer">
         <div class="project-overlay">
           <h3>Odds Burguer</h3>
           <p>Projeto de aplicação de delivery desenvolvido para hamburgueria</p>
