--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
     <section id="projetos">
       <h2>Projetos</h2>
-      <div class="project-card">
+      <div className="project-card">
         <img src="/images/oddslogo.png" alt="Odds Burguer">
-        <div class="project-overlay">
+        <div className="project-overlay">
           <h3>Odds Burguer</h3>
           <p>Projeto de aplicação de delivery desenvolvido para hamburgueria</p>
           <a href="https://github.com/Kai0so/odds-burguer-app" target="_blank">Ver Projeto</a>
