--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 <body>
   <header>
-    <h1>Kaio Militão</h1>
     <nav>
       <ul>
         <li><a href="#sobre">Sobre</a></li>
@@ -23,23 +22,25 @@
       </ul>
     </nav>
   </header>
-
   <main>
     <section id="sobre">
       <div class="about-container">
-        <h2 class="about-section-title">Sobre Mim</h2>
+        <h2 class="about-section-title">Olá, meu nome é Kaio Militão!</h2>
         <div class="about-content">
-          <p>Sou um entusiasta de tecnologia desde criança e me formei em desenvolvimento WEB full stack pela Trybe.
-            Tenho experiência em desenvolvimento utilizando as tecnologias HTML, CSS, JavaScript, React, MySQL,
-            Node.js, TypeScript, MongoDB, Java, Python, GIT, Docker, Testes automatizados, e utilizo essas
+          <img src="/images/profile.jpeg" alt="Kaio Militão" class="about-image" />
+          <div class="about-image-container">
+          </div>
+          <p>"Sou um entusiasta em tecnologia desde criança e me formei em desenvolvimento WEB full stack pela Trybe,
+            onde estudei e aprimorei minhas habilidades em desenvolvimento Front-End, Back-End, além de arquitetura,
+            padrões de projetos e metodologias ágeis. Utilizo dessas
             habilidades para criar soluções eficientes e inovadoras em meus projetos. Estou sempre em busca de novos
-            desafios e oportunidades de aprendizado para continuar crescendo como profissional.</p>
+            desafios e oportunidades de aprendizado para continuar crescendo como profissional."</p>
         </div>
       </div>
     </section>
-
     <section id="projetos">
       <h2>Projetos</h2>
+      <br />
       <div class="project-card">
         <img src="/images/oddslogo.png" alt="Odds Burguer">
         <div class="project-overlay">
@@ -48,7 +49,7 @@
           <a href="https://github.com/Kai0so/odds-burguer-app" target="_blank">Ver Projeto</a>
         </div>
       </div>
-
+      <br />
       <div class="project-card">
         <img src="/images/trybelogo.png" alt="Trybe">
         <div class="project-overlay">
@@ -59,10 +60,9 @@
         </div>
       </div>
     </section>
-
-
     <section id="habilidades">
       <h2>Habilidades</h2>
+      <br />
       <div class="skills">
         <ul class="skills-list">
           <li>HTML</li>
@@ -80,7 +80,6 @@
         </ul>
       </div>
     </section>
-
     <section id="contato">
       <h2>Contato</h2>
       <div class="contact-buttons">
@@ -91,7 +90,6 @@
       </div>
     </section>
   </main>
-
   <footer>
     <p>&copy; 2023 Kaio Militão</p>
   </footer>
