--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
           <a href="https://github.com/Kai0so?tab=repositories" target="_blank">Ver Projetos</a>
         </div>
       </div>
+      <div class="project-card">
+        <img src="/images/educ.png" alt="EDUC">
+        <div class="project-overlay">
+          <h3>EDUC</h3>
+          <p>Aplicação institucional feita em React.js para escola de cursos livres EDUC Profissões</p>
+          <a href="https://educprofissoes.github.io/app/" target="_blank">Ver Projeto</a>
+        </div>
+      </div>     
     </section>
     <section id="habilidades">
       <h2>Habilidades</h2>
