--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       <div class="project-card">
         <img src="/images/educ.png" alt="EDUC">
         <div class="project-overlay">
-          <h3>EDUC</h3>
-          <p>Aplicação institucional feita em React.js para escola de cursos livres EDUC Profissões</p>
+          <h3>EDUC Profissões</h3>
+          <p>Aplicação institucional feita em React.js para a escola de cursos livres EDUC Profissões</p>
           <a href="https://educprofissoes.github.io/app/" target="_blank">Ver Projeto</a>
         </div>
       </div>     
