--- a/index.html
+++ b/index.html
@@ -66,7 +66,15 @@
           <p>Aplicação institucional feita em React.js para a escola de cursos livres EDUC Profissões</p>
           <a href="https://educprofissoes.github.io/app/" target="_blank">Ver Projeto</a>
         </div>
-      </div>     
+      </div>
+      <div class="project-card">
+        <img src="/images/eaula.png" alt="eAula">
+        <div class="project-overlay">
+          <h3>eAula</h3>
+          <p>Aplicação institucional, sistema de aulas e portal do licenciado feito em PHP/JS para a faculdade eAula</p>
+          <a href="https://eaula.com.br" target="_blank">Ver Projeto</a>
+        </div>
+      </div>
     </section>
     <section id="habilidades">
       <h2>Habilidades</h2>
