--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
           <li>MongoDB</li>
           <li>Java</li>
           <li>Python</li>
+          <li>PHP</li>
           <li>Testes</li>
           <li>Docker</li>
         </ul>
@@ -110,7 +111,7 @@
     </section>
   </main>
   <footer>
-    <p>&copy; 2023 Kaio Militão</p>
+    <p>&copy; 2024 Kaio Militão</p>
   </footer>
 </body>
 
